--- a/views/forgotPassword.pug
+++ b/views/forgotPassword.pug
@@ -21,4 +21,4 @@ body
       a(href='/login')#back ↩ Back
   footer
     script(src='/js/index.js')
-    script(src='/js/parseMessages.js')
+    script(src='/js/parseAlert.js')
