--- a/views/login.pug
+++ b/views/login.pug
@@ -29,4 +29,4 @@ body
           strong X
   footer
     script(src='/js/index.js')
-    script(src='/js/parseMessages.js')
+    script(src='/js/parseAlert.js')
