--- a/views/register.pug
+++ b/views/register.pug
@@ -28,4 +28,4 @@ body
         a(href='/login') Login
   footer
     script(src='/js/index.js')
-    script(src='/js/parseMessages.js')
+    script(src='/js/parseAlert.js')
