--- a/views/reset.pug
+++ b/views/reset.pug
@@ -21,4 +21,4 @@ body
       button(type='submit') Reset password
   footer
     script(src='/js/index.js')
-    script(src='/js/parseMessages.js')
+    script(src='/js/parseAlert.js')
