--- a/public/css/index.css
+++ b/public/css/index.css
@@ -81,7 +81,7 @@
   width: 50%;
 }
 
-#message{
+#alert{
   position: absolute;
   bottom: 25px;
   left: 50%-230px;
@@ -93,19 +93,19 @@
   font-size: 18px;
 }
 
-#message.red{
+#alert.red{
   background-color: white;
   border-color: #b04141;
   color: #ff6161;
 }
 
-#message.green{
+#alert.green{
   background-color: white;
   border-color: darkgreen;
   color: green;
 }
 
-#message a{
+#alert a{
   float: right;
   cursor: pointer;
 }
