--- a/public/css/messaging.css
+++ b/public/css/messaging.css
@@ -1,6 +1,62 @@
 
 /* Ids */
 
+#textbox{
+    background: white;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    padding-left: 25px;
+    padding-right: 25px;
+    box-sizing: border-box;
+    border-top: 1px solid grey;
+}
+
+#textbox input[type=text]{
+    width: 90%;
+    border-color: #151515;
+}
+
+#textbox button[type=submit]{
+    margin-left: 2.5%;
+    border-color: #151515;
+}
+
+#chat-screen{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 100px;
+    padding-top: 100px;
+    box-sizing: border-box;
+}
+
+#chat-header{
+    background: white;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100px;
+    padding-left: 25px;
+    padding-right: 25px;
+    box-sizing: border-box;
+    border-bottom: 1px solid grey;
+    display: flex;
+    align-items: center;
+}
+
+#nav-button i{
+    font-size: 32px;
+}
+
 /* Classes */
 
 .temp{
