--- a/views/messaging.pug
+++ b/views/messaging.pug
@@ -14,6 +14,7 @@ body
     form(action='api/user/logout' method='POST')
       button(type='submit') Logout
   nav#menu
+    button#logout Logout
   main
     section#chat-header
       a(onclick='openNav();')#nav-button
