--- a/views/messaging.pug
+++ b/views/messaging.pug
@@ -9,15 +9,14 @@ head
   link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap')
   script(src='https://kit.fontawesome.com/9ff649492a.js' crossorigin='anonymous')
 body
-  div.temp
-    | Now you're logged in 
-    form(action='api/user/logout' method='POST')
-      button(type='submit') Logout
   nav#menu.closed
-    button#logout Logout
+    form(action='api/user/logout' method='POST')#logout
+      button(type='submit') Logout
+    button#close(onclick='toggleMenu("closed");')
+      i(class='fa fa-times')
   main
     section#chat-header
-      a(onclick='openNav();')#nav-button
+      a(onclick='toggleMenu("open");')#nav-button
         i(class='fa fa-bars')
     section#chat-screen
     form(action='/api/message/send')#textbox
