--- a/public/css/messaging.css
+++ b/public/css/messaging.css
@@ -79,14 +79,36 @@
     margin-left: 0;
 }
 
-#menu #close{
+#menu #logout{
+    border-top: 1px solid grey;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    padding: 25px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#menu #menu-header{
+    border-bottom: 1px solid grey;
+    margin: 0px;
+    height: 75px;
+}
+
+#menu #menu-header h1{
+    margin-left: 15px;
+    font-size: 28px;
+}
+
+#menu #menu-header #close{
     background: none;
     border: none;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-weight: bold;
     font-size: 28px;
+    position: absolute;
+    top: 25px;
+    right: 10px;
 }
 
 /* Classes */
