--- a/views/messaging.pug
+++ b/views/messaging.pug
@@ -16,6 +16,9 @@ body
       h1 Chats
       button#close(onclick='toggleMenu("closed");')
         i(class='fa fa-times')
+    div.chat
+      h1 Bob
+      h3 This is the last message
   main
     section#chat-header
       a(onclick='toggleMenu("open");')#nav-button
