--- a/public/css/messaging.css
+++ b/public/css/messaging.css
@@ -112,7 +112,8 @@
 }
 
 #menu .chat{
-    border: 1px solid grey;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
 }
 
 /* Classes */
